
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


typedef int si ;
typedef int pi ;
struct TYPE_6__ {int cb; int hProcess; int hThread; int wShowWindow; int dwFlags; } ;
typedef TYPE_1__ STARTUPINFOA ;
typedef TYPE_1__ PROCESS_INFORMATION ;


 int CREATE_NEW_CONSOLE ;
 int CloseHandle (int ) ;
 int CreateProcess (int *,char*,int *,int *,int ,int ,int *,int *,TYPE_1__*,TYPE_1__*) ;
 int GetLastError () ;
 int STARTF_USESHOWWINDOW ;
 int SW_SHOWNORMAL ;
 int TRUE ;
 int ZeroMemory (TYPE_1__*,int) ;
 int printf (char*,int) ;

void spawnShell()
{
    STARTUPINFOA si;
    PROCESS_INFORMATION pi;


    ZeroMemory(&pi, sizeof(pi));
    ZeroMemory(&si, sizeof(si));
    si.cb = sizeof(si);

    si.cb = sizeof(si);
    si.dwFlags = STARTF_USESHOWWINDOW;
    si.wShowWindow = SW_SHOWNORMAL;

    if (!CreateProcess(((void*)0), "cmd.exe", ((void*)0), ((void*)0), TRUE, CREATE_NEW_CONSOLE, ((void*)0), ((void*)0), &si, &pi))
    {
        printf("\n[-] CreateProcess failed (%d)\n\n", GetLastError());
        return;
    }

    CloseHandle(pi.hThread);
    CloseHandle(pi.hProcess);
}
